--- a/index.html
+++ b/index.html
@@ -1,28 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snake Game</title>
-    <style>
-         body{
-            margin:0px;
-            padding:0px;
-            display:flex;
-            flex-direction: column;
-            justify-content: center;
-            align-items: center;
-        }
-        canvas{
-            box-shadow: black 20px 10px 50px;
-
-        }
-    </style>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Snake Game</title>
+  <!-- Favicons -->
+  <link href="assets/icon.png" rel="icon">
+	<link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Snake Game</h1>
-    <canvas id="game" width="400" height="400"/>
+    <div class="main">
+	<div id="game-container">
+		<canvas id="gc" class="game-canvas" width="400" height="400"></canvas>
+	</div>
+	<div class="keys">
+	  <a class="up arr" onclick="Snake.action('up')">
+	    <i class="chevron up"></i></a>
+	  <br />
+	  <a class="left arr" onclick="Snake.action('left')">
+	    <i class="chevron left"></i></a>
+	  <a class="down arr" onclick="Snake.action('down')">
+	    <i class="chevron down"></i></a>
+	  <a class="right arr" onclick="Snake.action('right')">
+	    <i class="chevron right"></i></a>
+	</div>
+	
+
+
+	<div>
+	</div>
+    </div>
+	<script type="text/javascript" src="./index.js"></script>
 </body>
-<script src="./index.js"></script>
 </html>
